# cancer-prediction-ep650

./: mkdocs.yml  pyproject.toml
cancer_prediction/: streamlit_app.py
docs/: index.md
tests/: test_CancerModel.py
