[tool.poetry]
name = "cancer-prediction-ep650"
version = "0.1.0"
description = "A package to detect cancer"
authors = ["Esdras <126961486+epz0@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include =  "cancer_prediction"}]

[tool.poetry.scripts]
cancer-prediction =  "cancer_prediction.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.40.1"
typer = "^0.13.0"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
black = "^24.10.0"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
